# wsn-multisink

./: .gitignore  CMakeLists.txt  README.md  organize_results.sh  run_tests.sh
include/: CMakeLists.txt  WSN.h  WSN_mtz_castroandrade2023-impSBPO-corrigido.h  all_models.h  arguments_parser.h  flow_based.h  funcoes.h  model_runner.h  part_model.h  util.h  util_data.h  util_model.h  util_results.h  util_solution.h  wsn_constructive_heur.h  wsn_data.h  wsn_solution.h
include/models/: WSN.h  WSN_arvore_rotulada_model_base.h  WSN_arvore_rotulada_model_flow.h  WSN_arvore_rotulada_model_mtz.h  WSN_flow_model_0.h  WSN_flow_model_0_1.h  WSN_flow_model_1.h  WSN_flow_model_2.h  WSN_flow_model_2_1.h  WSN_flow_model_2_1_base.h  WSN_flow_model_2_1_sbc.h  WSN_flow_model_3.h  WSN_flow_model_3_base.h  WSN_flow_model_3_check_instance.h  WSN_flow_model_3_des.h  WSN_flow_model_3idx.h  WSN_mcf_model.h  WSN_mcf_model_adasme2023.h  WSN_mcf_model_base.h  WSN_mcf_model_base_testing.h  WSN_mcf_model_castro2023.h  WSN_mcf_model_mcf_valid.h  WSN_mcf_model_weightAsFlow_base.h  WSN_mcf_model_weight_on_node.h  WSN_mcf_model_weight_on_node_benders.h  WSN_mcf_weight_arc.h  WSN_mtz_castroandrade2023-SBPO.h  WSN_mtz_castroandrade2023-bektas2014.h  WSN_mtz_castroandrade2023-impSBPO.h  WSN_mtz_castroandrade2023-new_constr.h  WSN_mtz_castroandrade2023.h  WSN_mtz_model.h  WSN_mtz_model_2.h  WSN_mtz_model_2_1.h  WSN_repr_model_base.h  WSN_repr_model_flow.h  WSN_repr_model_mtz.h
instances/: den20mtsNodes_20.txt  den20mtsNodes_30.txt  den20mtsNodes_40.txt
src/: CMakeLists.txt  all_models.cpp  flow_based.cpp  funcoes.cpp  playground.cpp  run_part_of_model.cpp
tests/: CMakeLists.txt  test_utils.h  util_solution_test.cpp
